[gd_scene load_steps=22 format=1]

[ext_resource path="res://scripts/Saida.gd" type="Script" id=1]
[ext_resource path="res://scenes/meshes/hakuTrue.scn" type="PackedScene" id=2]
[ext_resource path="res://scripts/camera.gd" type="Script" id=3]
[ext_resource path="res://scenes/meshes/saida.scn" type="PackedScene" id=4]
[ext_resource path="res://scenes/meshes/botao.msh" type="Mesh" id=5]
[ext_resource path="res://scenes/meshes/arina.scn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Expression.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/meshes/FEI.scn" type="PackedScene" id=8]
[ext_resource path="res://scenes/meshes/hanaga2.scn" type="PackedScene" id=9]
[ext_resource path="res://addons/SMRT/dialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/panel.png" type="Texture" id=11]
[ext_resource path="res://assets/fonts/Pixel_Berry_08_84_Ltd.Edition.TTF" type="DynamicFontData" id=12]
[ext_resource path="res://scenes/Inventory.tscn" type="PackedScene" id=13]

[sub_resource type="Environment" id=1]

ambient_light/enabled = true
ambient_light/color = Color( 0.196078, 0.184314, 0.12549, 1 )
ambient_light/energy = 1.0
fxaa/enabled = false
background/mode = 1
background/color = Color( 0, 0, 0, 1 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.0
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 1
glow/blur_scale = 1
glow/blur_strength = 1
glow/blur_blend_mode = null
glow/bloom = 0.0
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = false
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[sub_resource type="BoxShape" id=2]

extents = Vector3( 1, 5.60045, 8.70067 )

[sub_resource type="BoxShape" id=3]

extents = Vector3( 17.7928, 5.9743, 1 )

[sub_resource type="BoxShape" id=4]

extents = Vector3( 1.75756, 2.6167, 1 )

[sub_resource type="BoxShape" id=5]

extents = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=6]

extents = Vector3( 2.71345, 6.43015, 3.83315 )

[sub_resource type="BoxShape" id=7]

extents = Vector3( 1, 1, 0.704038 )

[sub_resource type="DynamicFont" id=8]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 12 )

[node name="Saida" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.687908, -0.327426, 0.647747, -0.143858, 0.813246, 0.563859, -0.711398, -0.481066, 0.512335, 13.9326, 54.7869, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="Haku" parent="." instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )

[node name="Camera" type="Camera" parent="Haku"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.663414, -0.383022, 0.642788, 0.0252013, 0.870002, 0.492404, -0.747828, -0.310468, 0.586824, 46.3409, 40.6939, 41.2929 )
projection = 1
size = 45.0
near = 0.11
far = 200.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
script/script = ExtResource( 3 )

[node name="saida" parent="." instance=ExtResource( 4 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.07992, 0 )

[node name="Areas" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.07992, 0 )

[node name="AreaPorta" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -37.9941, 6.05606, -2.91787 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaPorta"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -37.9941, 6.05606, -2.91787 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="AreaBigPorta" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.799097, 6.50146, -15.453 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaBigPorta"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.799097, 6.50146, -15.453 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="AreaBotao" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.0498, 7.36164, -14.5475 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaBotao"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.0498, 7.36164, -14.5475 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="BotaoSaida" type="MeshInstance" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 21.9967, 0.907892, -14.7323 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 5 )
mesh/skeleton = NodePath("..")
material/0 = null

[node name="arina" parent="." instance=ExtResource( 6 )]

editor/display_folded = true
transform/local = Transform( -2.84736, 0, -0.631222, 0, 2.91649, 0, 0.631222, 0, -2.84736, 17.9488, 0.0759478, 16.2101 )

[node name="AreaArina" type="Area" parent="arina"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="arina/AreaArina"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Expression" parent="arina" instance=ExtResource( 7 )]

transform/local = Transform( 0.373988, 0, 0, 0, 0.373988, 0, 0, 0, 0.373988, 0, 3.44807, 0 )

[node name="Fei" parent="." instance=ExtResource( 8 )]

transform/local = Transform( -0.996312, 0, -0.085808, 0, 1, 0, 0.085808, 0, -0.996312, 6.81242, 0.902148, 15.972 )

[node name="Expression" parent="Fei" instance=ExtResource( 7 )]

transform/local = Transform( 0.43894, -0.375536, 0.816275, -0.101846, 0.88182, 0.460457, -0.892726, -0.285248, 0.348819, -2.98023e-07, 12.5909, -0.969116 )

[node name="AreaFei" type="Area" parent="Fei"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Transform( 0, 0, 0.999999, 0, 1, 0, -0.999999, 0, 0, -0.134165, 2.11733, 0.241976 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Fei/AreaFei"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0, 0, 0.999999, 0, 1, 0, -0.999999, 0, 0, -0.134165, 2.11733, 0.241976 )
shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[node name="Hanaga" parent="." instance=ExtResource( 9 )]

editor/display_folded = true
transform/local = Transform( -1.83695, 0, 3.22969, 0, 3.71555, 0, -3.22969, 0, -1.83695, -19.6574, 1.1808, -6.47287 )

[node name="Expression" parent="Hanaga" instance=ExtResource( 7 )]

transform/local = Transform( 0.373988, 0, 0, 0, 0.373988, 0, 0, 0, 0.373988, 0, 3.44807, 0 )

[node name="AreaHanaga" type="Area" parent="Hanaga"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Transform( 1, 0, 1.86265e-09, 0, 0.999999, 0, -1.86265e-09, 0, 1, 0.122251, 0, -0.274283 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Hanaga/AreaHanaga"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 1.86265e-09, 0, 0.999999, 0, -1.86265e-09, 0, 1, 0.122251, 0, -0.274283 )
shape = SubResource( 7 )
trigger = true
_update_shape_index = 0

[node name="Canvas" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="dialog" parent="Canvas" instance=ExtResource( 10 )]

margin/left = 31.0
margin/top = 412.0
margin/right = 30.0
margin/bottom = 40.0
texture = ExtResource( 11 )
patch_margin/left = 20
patch_margin/right = 20
language = "res://saida.lan"
font = SubResource( 8 )
font_size = 20
dialog_frame_height = 3
show_debug_messages = false

[node name="Inventory" parent="." instance=ExtResource( 13 )]

editor/display_folded = true

[connection signal="body_enter" from="Areas/AreaPorta" to="." method="_on_AreaPorta_body_enter"]

[connection signal="body_enter" from="Areas/AreaBotao" to="." method="_on_AreaBotao_body_enter"]

[connection signal="body_exit" from="Areas/AreaBotao" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="arina/AreaArina" to="." method="_on_AreaArina_body_enter"]

[connection signal="body_exit" from="arina/AreaArina" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Fei/AreaFei" to="." method="_on_AreaFei_body_enter"]

[connection signal="body_exit" from="Fei/AreaFei" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Hanaga/AreaHanaga" to="." method="_on_AreaHanaga_body_enter"]

[connection signal="body_exit" from="Hanaga/AreaHanaga" to="." method="_on_Area_body_exit"]

[connection signal="dialog_control" from="Canvas/dialog" to="." method="_on_dialog_dialog_control"]

[connection signal="finished" from="Canvas/dialog" to="." method="_on_dialog_finished"]


